--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -88,7 +88,7 @@ li
 // 主客页 标签列表页
 .c-tab-list 
   background #fff
-  border-top .5rem solid #f6f6f6
+  border-top .5rem solid #F8F8F8
   
   .c-tab-title
     display flex
