--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -325,11 +325,16 @@ li
     text-align center
     img
       width 100%
-
+      
+@-webkit-keyframes rotate 
+  0%
+    transform rotate(0deg)
+  
+  100%
+    transform rotate(360deg)
 // 加载中
 .c-loading
-  display none
-  background #f8f8f8
+  background #fff
   text-align center
   font-size .6rem
   padding .5rem 0
