--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -32,9 +32,15 @@ body, ul, p, dl, dd
   margin 0
   padding 0
 
-
+a
+  -webkit-tap-highlight-color rgba(255, 0, 0, 0)
+  &:focus
+    background none
 li
+  -webkit-tap-highlight-color rgba(255, 0, 0, 0)
   list-style-type none
+  &:focus
+    background none
    
 .c-wp
   height 100%
@@ -145,38 +151,38 @@ li
     vertical-align middle
     
 .c-att-t
-  position absolute;
-  right 0.75rem;
-  top .9rem;
-  width 2.5rem;
-  height 1.25rem;
-  line-height 23px;
-  text-align center;
-  font-size 10px;
-  color #2873ff;
-  border 1px solid #2873ff;
-  text-decoration none;
-  box-sizing border-box;
+  position absolute
+  right 0.75rem
+  top .9rem
+  width 2.5rem
+  height 1.25rem
+  line-height 23px
+  text-align center
+  font-size 10px
+  color #2873ff
+  border 1px solid #2873ff
+  text-decoration none
+  box-sizing border-box
   &.on
-    border 1px solid #eee;
-    color #ccc;
+    border 1px solid #eee
+    color #ccc
   
   > span
-    vertical-align 1px;
+    vertical-align 1px
   
 .c-att-delete
-  position: absolute;
-  right: .8rem;
-  top: 1.1rem;
-  font-size: .6rem;
-  text-decoration: none;
-  background: url(./assets/delete.png) center no-repeat;
-  height: 1rem;
-  width: 1rem;
-  background-size: 100% auto;
+  position absolute
+  right .8rem
+  top 1.1rem
+  font-size .6rem
+  text-decoration none
+  background url(./assets/delete.png) center no-repeat
+  height 1rem
+  width 1rem
+  background-size 100% auto
   &.on
-    border: 1px solid #eee;
-    color: #ccc;
+    border 1px solid #eee
+    color #ccc
 
 .c-media-desc
   margin 11px 0 12px
@@ -224,7 +230,7 @@ li
   img
     float left
     width 33.3%
-    height: auto; 
+    height auto 
     padding-right 5px
     box-sizing border-box
     max-height 100%
@@ -256,20 +262,20 @@ li
       border-left 16px solid #fff
       border-bottom 9px solid transparent
   .c-media-time
-    position: absolute;
-    background: rgba(27, 27, 27, 0.4);
-    border-radius: 2px;
-    color: #fff;
-    line-height: 1;
-    padding: 2px;
-    bottom: .4rem;
-    right: .3rem;
-    font-size: 10px;
-    border-radius: 2px;
-    width: 34px;
-    height: 16px;
-    line-height: 16px;
-    text-align: center;
+    position absolute
+    background rgba(27, 27, 27, 0.4)
+    border-radius 2px
+    color #fff
+    line-height 1
+    padding 2px
+    bottom .4rem
+    right .3rem
+    font-size 10px
+    border-radius 2px
+    width 34px
+    height 16px
+    line-height 16px
+    text-align center
 
 .c-media-audio
   overflow hidden
