--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -94,7 +94,7 @@ li
 // 主客页 标签列表页
 .c-tab-list 
   background #fff
-  border-top .5rem solid #F8F8F8
+  // border-top .5rem solid #F8F8F8
   
   .c-tab-title
     display flex
@@ -187,6 +187,11 @@ li
 .c-media-desc
   margin 11px 0 12px
   font-size .85rem
+  overflow hidden
+  text-overflow ellipsis
+  display -webkit-box
+  -webkit-line-clamp 5
+  -webkit-box-orient vertical
 
 .c-media-content
   img
