--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -63,7 +63,7 @@ li
     margin-right .75rem
     border 1px solid rgba(238,238,238,.3)
     border-radius 50%
-    background url(./assets/pic_head.png) no-repeat
+    // background url(./assets/pic_head.png) no-repeat
     background-size 100% 100%
     background-clip padding-box
     overflow hidden
@@ -122,8 +122,8 @@ li
 .c-tab-ul
   > li
     position relative
-    padding .8rem
-    padding-bottom .6rem
+    margin 0 .75rem
+    padding .75rem 0 .6rem
     overflow hidden
     border-bottom 1px solid #f6f6f6
     
@@ -136,7 +136,7 @@ li
     vertical-align -.6rem
     border 1px solid rgba(238,238,238,.3)
     border-radius 50%
-    background url(./assets/pic_head.png) no-repeat
+    // background url(./assets/pic_head.png) no-repeat
     background-color #fff
     background-size 100% 100%
     background-clip padding-box
@@ -193,6 +193,9 @@ li
   -webkit-line-clamp 5
   -webkit-box-orient vertical
 
+.c-media-qing
+  -webkit-line-clamp 2
+  
 .c-media-content
   img
     width 100%
