--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -154,7 +154,8 @@ img[lazy=loading]
     
 .c-att-t
   position absolute
-  right 0.75rem
+  right 0
+  // right 0.75rem
   top .9rem
   width 2.5rem
   height 1.25rem
@@ -192,11 +193,11 @@ img[lazy=loading]
   overflow hidden
   text-overflow ellipsis
   display -webkit-box
-  -webkit-line-clamp 5
+  -webkit-line-clamp 2
   -webkit-box-orient vertical
 
 .c-media-qing
-  -webkit-line-clamp 2
+  -webkit-line-clamp 5
    
 .c-media-content
   img
