--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -125,10 +125,16 @@ img[lazy=loading]
 .c-tab-ul
   > li
     position relative
-    margin 0 .75rem
-    padding .75rem 0 .6rem
+    // margin 0 .75rem
+    padding .75rem 0.75rem 0
     overflow hidden
-    border-bottom 1px solid #f6f6f6
+    // border-bottom 1px solid #f6f6f6
+    &:after
+      content ''
+      display block
+      width 100%
+      height 1px
+      background #f6f6f6
     
 .c-media-info
   display inline-block
@@ -228,6 +234,7 @@ img[lazy=loading]
   clear both
   height 20px
   margin-top 8px
+  margin-bottom .6rem
   font-size 12px
   color #C3C3C3
   line-height 20px
