--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -220,6 +220,7 @@ img[lazy=loading]
     overflow hidden
     width 66.7%
     height 46px
+    line-height 23px
     font-size 0.85rem
     padding-right 20px
     box-sizing border-box
