主客页分享按钮消失问题

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -189,7 +189,8 @@ img[lazy=loading]
   background url(./assets/delete.png) center no-repeat
   height 1rem
   width 1rem
-  background-size 100% auto
+  background-size 20px auto
+  padding 2px
   &.on
     border 1px solid #eee
     color #ccc
