--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -257,6 +257,18 @@ img[lazy=loading]
     max-height 100%
     &:last-of-type
       padding-right 0
+  .c-qing-num
+    position absolute
+    right 1rem
+    bottom .3rem
+    width .9rem
+    height .9rem
+    text-align center
+    line-height 1.3
+    font-size .68rem
+    background rgba(27, 27, 27, 0.8)
+    border-radius 1px
+    color #fff 
       
 .c-media-video
   position relative
