--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -245,6 +245,7 @@ img[lazy=loading]
     float left
       
 .c-media-qing-more
+  position relative
   overflow hidden
   width 100%
   margin-bottom 12px
@@ -259,14 +260,14 @@ img[lazy=loading]
       padding-right 0
   .c-qing-num
     position absolute
-    right 1rem
-    bottom .3rem
-    width .9rem
-    height .9rem
+    right 4px
+    bottom 4px
+    width .8rem
+    height .8rem
+    line-height .8rem
     text-align center
-    line-height 1.3
-    font-size .68rem
-    background rgba(27, 27, 27, 0.8)
+    font-size .5rem
+    background rgba(27, 27, 27, .8)
     border-radius 1px
     color #fff 
       
