--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -374,6 +374,7 @@ img[lazy=loading]
     width 80px
     height 80px
     text-align center
+    margin-top 22px
     img
       width 100%
       
