主客页吸顶修改及轻文描述添加两行限制

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -314,7 +314,7 @@ img[lazy=loading]
   margin-top 11px
   font-size 0.85rem
   .c-media-desc
-    margin-right 10px
+    margin 0
     word-break break-all
     
   .media-audio-pic
