标签列表页主客页修改及添加二级频道页

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -302,11 +302,12 @@ img[lazy=loading]
     bottom .4rem
     right .3rem
     font-size 10px
+    line-height 10px
+    padding 3px 0
     border-radius 2px
     width 34px
-    height 16px
-    line-height 16px
     text-align center
+    vertical-align middle
 
 .c-media-audio
   overflow hidden
